Back up Sep. 22th, 23th Meeting Minutes
9월 22일 23일 회의 내용 정리 후 백업.

--- a/Meeting Minutes/Meeting_Minutes.vcxproj
+++ b/Meeting Minutes/Meeting_Minutes.vcxproj
@@ -142,6 +142,8 @@
     <ClCompile Include="220919.cpp" />
     <ClCompile Include="220920.cpp" />
     <ClCompile Include="220921.cpp" />
+    <ClCompile Include="220922.cpp" />
+    <ClCompile Include="220923.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
