--- a/Meeting Minutes/Meeting_Minutes.vcxproj.filters
+++ b/Meeting Minutes/Meeting_Minutes.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="220921.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="220922.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="220923.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
