--- a/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj.filters
+++ b/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="view_server.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="소스.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="protocol.h">
