클라이언트-서버 연결
통신/통신 종료 미구현

--- a/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj
+++ b/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj
@@ -133,8 +133,13 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="view_server.cpp" />
-    <ClCompile Include="소스.cpp" />
+    <ClCompile Include="SERVER.cpp" />
+    <ClCompile Include="view_server.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="소스.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="protocol.h" />
