create defferred rendering player

--- a/defferred/Voodoo_Doll/VOODOO DOLL/VOODOO DOLL.vcxproj.filters
+++ b/defferred/Voodoo_Doll/VOODOO DOLL/VOODOO DOLL.vcxproj.filters
@@ -110,4 +110,7 @@
     <FxCompile Include="Light.hlsl" />
     <FxCompile Include="Shaders.hlsl" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
+  </ItemGroup>
 </Project>
