--- a/defferred/Voodoo_Doll/VOODOO DOLL/VOODOO DOLL.vcxproj
+++ b/defferred/Voodoo_Doll/VOODOO DOLL/VOODOO DOLL.vcxproj
@@ -191,6 +191,9 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.1</ShaderModel>
     </FxCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
