메모리풀 프레임워크 생성
몬스터 객체 관리에 적용할 예정

--- a/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj
+++ b/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj
@@ -145,7 +145,7 @@
     <ClCompile Include="Player.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="PoolManager.cpp">
+    <ClCompile Include="MemoryPool.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
@@ -169,7 +169,7 @@
     <ClInclude Include="Player.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="PoolManager.h" />
+    <ClInclude Include="MemoryPool.h" />
     <ClInclude Include="protocol.h" />
     <ClInclude Include="Shader.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
