--- a/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj.filters
+++ b/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="view_server.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="PoolManager.cpp">
+    <ClCompile Include="MemoryPool.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
@@ -47,7 +47,7 @@
     <ClInclude Include="protocol.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="PoolManager.h">
+    <ClInclude Include="MemoryPool.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
