Complete camera sync when changing player mode, added knight player attack animation
기사 모드와 궁수 모드에서 공격 z버튼을 눌렀을 때 애니메이션이 올바른 위치에서 나오지 않는 문제

--- a/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj.filters
+++ b/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj.filters
@@ -164,4 +164,7 @@
     <FxCompile Include="Light.hlsl" />
     <FxCompile Include="Shaders.hlsl" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="readMe.txt" />
+  </ItemGroup>
 </Project>
