--- a/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj.filters
+++ b/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="Timer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
