--- a/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
+++ b/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="GameFramework.h" />
     <ClInclude Include="Login.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="protocol.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="GameFramework.cpp" />
     <ClCompile Include="Login.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Shader.cpp" />
