--- a/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
+++ b/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
@@ -119,6 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
