Monster Dead Error Fixed
Monster 객체의 정의를 수정

--- a/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
+++ b/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
@@ -119,7 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <Optimization>Disabled</Optimization>
+      <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
