Align door indexes in stage order
스테이지 순서대로 문 인덱스를 맞춤, 스테이지 2가 끝나면 문이 없고 계단이 있어서 contiue문 사용, 2층 오브젝트의 그림자가 1층에 나오지 않게 수정

--- a/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
+++ b/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
@@ -122,6 +122,7 @@
       <ConformanceMode>false</ConformanceMode>
       <Optimization>MaxSpeed</Optimization>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
