Troubleshooting Damage Effects Not Working
피격 이펙트가 안 나오는 문제 해결

--- a/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
+++ b/VOODOODOLL/VooDoo_Doll/VooDoo_Doll.vcxproj
@@ -122,7 +122,7 @@
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <Optimization>MaxSpeed</Optimization>
-      <LanguageStandard>Default</LanguageStandard>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
