--- a/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj
+++ b/SERVER/VIEW/SERVER/SERVER/SERVER.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="stdafx.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="MyThread.h" />
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
